tests/cases/compiler/ClassDeclaration11/index.ts
class C {
   constructor(); //~ ERROR: Constructor implementation is missing.
   foo() { }
}